fix: resolve build errors for production deployment
- Remove import map from index.html (conflicts with Vite bundling)
- Add script tag to load index.tsx as entry point
- Downgrade tailwindcss to v3 for PostCSS compatibility
- Build now succeeds with proper asset generation

--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
     <title>ChoicePath - 임신 주수 확인 및 지원 정보</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
-  }
-}
-</script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
